compiler/tests/fail/annotation/x86-64/returnaddress.jazz
// wrong annotation, we check that an error is reported

#[returnaddress]
export fn f () {}
